Prevent scrollbar from repositioning page

--- a/client-react/src/css/main.css
+++ b/client-react/src/css/main.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .articles-searchbox {
   margin-bottom: 1em;
 }
